compiler/testData/cli/jvm/internalArgMissingModificator.out
warning: incorrect internal argument syntax, missing modificator: -XXLanguage:SoundSmartCastAfterTry
compiler/testData/cli/jvm/legacySmartCastsAfterTry.kt:8:9: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type String?
    some.length
        ^
COMPILATION_ERROR
